fix logo icon + text display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,10 @@ nav a:active {
   font-weight: bold;
 }
 
+#logo-text {
+  display: inline-block;
+}
+
 /* 
 MainContent
 */
@@ -164,4 +168,15 @@ Footer
   width: 100%;
   background-color: #191414;
   font-size: small;
+}
+
+
+/* 
+Mobile styles
+*/
+
+@media (max-width: 600px) {
+  #logo-text {
+    display: none;
+  }
 }
